Spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,8 @@ body {
 	position: fixed;
 	left: 50%;
 	top: 50%;
+	width: 60%;
+	max-width: 400px;
 	transform: translate(-50%,-50%);
 	z-index: 0;
 }
@@ -49,8 +51,8 @@ body {
 }
 
 #IDPhoto {
-	height: 40vw;
-	width: 40vw;
+	height: 45vw;
+	width: 45vw;
 	max-width: 200px;
 	max-height: 200px;
 	background: url('../images/profile.jpg') no-repeat center center;
@@ -95,10 +97,10 @@ body {
 }
 .main ul li {
 	display: inline-block;
-	padding-left: 30px;
+	margin-left: 30px;
 }
 .main ul li:first-of-type {
-	padding-left: 0;
+	margin-left: 0;
 }
 .main ul li img {
 	width: 50px;
@@ -173,9 +175,9 @@ body {
 .footer p{
 	color: #508AA8;
 	font-size: 1em;
-	float: right;
+	text-align: right;
 	padding-top: 25px;
-	margin-right: 2%;
+	width: 90%;
 }
 
 .projects {
@@ -219,10 +221,10 @@ body {
 		display: block;
 		width: 100%;
 	}
-	.main ul li {
+	/*.main ul li {
 		display: block;
-		padding: 0 0 0.5em 0;
-	}
+		margin: 0 0 0.5em 0;
+	}*/
 	#pic {
 		margin: 1em 0 2em 0;
 	}
